--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-query": "^3.39.3",
     "react-youtube": "^10.1.0",
     "styled-components": "^6.1.13"
