--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.59.0",
     "axios": "^1.7.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
+    "react-oauth": "^0.0.1",
     "react-query": "^3.39.3",
     "react-youtube": "^10.1.0",
     "styled-components": "^6.1.13"
