--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-icons": "^5.3.0",
     "react-oauth": "^0.0.1",
     "react-query": "^3.39.3",
+    "react-slick": "^0.30.2",
     "react-youtube": "^10.1.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
