--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-query": "^3.39.3",
     "react-slick": "^0.30.2",
     "react-youtube": "^10.1.0",
+    "redux-devtools-extension": "^2.13.9",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
