--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
+    "react-lazyload": "^3.2.1",
     "react-oauth": "^0.0.1",
     "react-query": "^3.39.3",
     "react-slick": "^0.30.2",
