--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-lazyload": "^3.2.1",
     "react-oauth": "^0.0.1",
     "react-query": "^3.39.3",
+    "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
     "react-youtube": "^10.1.0",
     "redux-devtools-extension": "^2.13.9",
