Fix:테스트생략

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,9 +27,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      # 4. 테스트 실행 (선택 사항: 테스트가 없다면 생략 가능)
-      - name: Run Tests
-        run: npm test
+      # # 4. 테스트 실행 (선택 사항: 테스트가 없다면 생략 가능)
+      # - name: Run Tests
+      #   run: npm test
 
       # 5. Vercel로 배포
       - name: Deploy to Vercel
