Fix:프로덕션 배포 및 자동 확인

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,6 @@ jobs:
         uses: amondnet/vercel-action@v20
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }} # Vercel Personal Access Token
-          vercel-args: '--prod' # 프로덕션 배포
+          vercel-args: '--prod --yes'
           working-directory: ./ # 배포할 디렉터리 (프로젝트 루트 기준)
 
