--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
       # - name: Run Tests
       #   run: npm test
 
-      # 5. Vercel로 배포
+      # 5. Vercel로 배포.
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v20
         with:
