--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,5 +37,5 @@ jobs:
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }} # Vercel Personal Access Token
           vercel-args: '--prod --yes'
-          working-directory: ./ # 배포할 디렉터리 (프로젝트 루트 기준)
+          working-directory: ./ # 배포할 디렉터리 (프로젝트 루트 기준).
           vercel-project-name: 'nkj-player'
