Fix:경로 설정 변경

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "name": "nkj-player",
   "builds": [
     {
-      "src": "index.html",
+      "src": "build/**",
       "use": "@vercel/static"
     }
   ],
