--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "name": "nkj-player",
   "builds": [
     {
-      "src": "build/**",
+      "src": "dist/**",
       "use": "@vercel/static"
     }
   ],
