--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
-  "name": "nkj-player",
   "builds": [
     {
-      "src": "index.html",
-      "use": "@vercel/static"
+      "src": "vite.config.js",
+      "use": "@vercel/static-build"
     }
   ],
   "routes": [
