--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,13 @@
 {
+  "name": "nkj-player",
   "builds": [
     {
-      "src": "vite.config.js",
-      "use": "@vercel/static-build"
+      "src": "package.json",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "build/**/*",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
