--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-  "routes": [{ "handle": "filesystem" }, { "src": "/.*", "dest": "/index.html" }]
+  "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }]
 }
