--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "gen-pwa": "pwa-assets-generator --preset minimal public/logo.svg"
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@vite-pwa/assets-generator": "^0.2.6",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
@@ -44,6 +46,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
     "vite": "^5.2.0",
+    "vite-plugin-pwa": "^0.21.1",
     "vite-plugin-svgr": "^4.3.0"
   }
 }
