--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vite-pwa/assets-generator": "^0.2.6",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
@@ -45,8 +45,10 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
-    "vite": "^5.2.0",
+    "rollup-plugin-visualizer": "^5.14.0",
+    "vite": "^5.4.14",
     "vite-plugin-pwa": "^0.21.1",
-    "vite-plugin-svgr": "^4.3.0"
+    "vite-plugin-svgr": "^4.3.0",
+    "webpack-bundle-analyzer": "^4.10.2"
   }
 }
