--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "gen-pwa": "pwa-assets-generator --preset minimal public/logo.svg"
   },
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.59.0",
     "axios": "^1.7.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.3.0",
     "react-lazyload": "^3.2.1",
     "react-oauth": "^0.0.1",
     "react-query": "^3.39.3",
