--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
     "react-lazyload": "^3.2.1",
     "react-oauth": "^0.0.1",
     "react-query": "^3.39.3",
