--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.59.0",
     "axios": "^1.7.7",
+    "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
