--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.4.0",
     "react-lazyload": "^3.2.1",
     "react-oauth": "^0.0.1",
     "react-query": "^3.39.3",
@@ -49,6 +48,7 @@
     "prettier": "^3.3.3",
     "rollup-plugin-visualizer": "^5.14.0",
     "vite": "^5.4.14",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-pwa": "^0.21.1",
     "vite-plugin-svgr": "^4.3.0",
     "webpack-bundle-analyzer": "^4.10.2"
